--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_pdfview: ^1.4.0
+  dio: ^5.7.0
+  path_provider: ^2.1.5
+  open_file: ^3.5.10
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
